# UniMind

./: .dockerignore  .env.example  .gitignore  PROJECT_GUIDE.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260607_0001_initial_schema.py  20260621_0002_chat_material_scope.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  chat.py  courses.py  documents.py  health.py  rag.py  study.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
backend/app/db/: models.py  repositories.py
backend/app/domain/: enums.py
backend/app/infrastructure/: embeddings.py  extractors.py  llm.py  qdrant.py  storage.py
backend/app/schemas/: auth.py  chat.py  course.py  document.py  rag.py  study.py
backend/app/services/: auth.py  chat.py  chunking.py  documents.py  rag.py  study.py
backend/tests/: test_chat_service.py  test_chunking.py  test_ingestion_payload.py  test_rag.py  test_security.py  test_storage.py  test_study_service.py
database/: README.md
database/init/: 001_initial_schema.sql
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: page.tsx
frontend/components/: app-shell.tsx  auth-guard.tsx  citation-drawer.test.tsx  citation-drawer.tsx  status-badge.test.tsx  status-badge.tsx  ui.tsx
frontend/types/: api.ts
(+16 files in other folders)
