[project]
name = "unimind-backend"
version = "0.1.0"
description = "FastAPI backend for the UniMind AI study assistant."
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.3",
    "email-validator>=2.2.0",
    "fastapi>=0.111.0",
    "greenlet>=3.0.3",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.4",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "qdrant-client==1.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.31",
    "structlog>=24.2.0",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0.1",
]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
